# SampleCodes

./: CMakeLists.txt  README.md
C/: avx512test.c
C/AVX2/: avx2test.c
C/Amdahls-law/: law.c
C/MPI/: CMakeLists.txt  allgather.c  alltoall.c  bcast.c  hello.c  hello.sh  monte-carlo.c  reduce.c  scatterv.c  send_and_recv.c  sendrecv.c
C/MPI/Collective/: allgather.c  allgatherv.c  allreduce.c  alltoall.c  alltoallv.c  barrier.c  bcast.c  gather.c  gatherv.c  reduce.c  scatter.c  scatterv.c
C/MPI/Point-to-Point/: isend_and_irecv.c  send_and_recv.c  sendrecv.c  sendrecv_replace.c
C/MPI/Sorting/: bitonic.c  psrs.c
C/OpenACC/: CMakeLists.txt
C/OpenACC/MM/: MM.c
C/OpenMP/: CMakeLists.txt  fib.c  ifdef_test.c  lastprivate_test.c  loop_static_test.c  loop_test.c  monte-carlo.c  private_test.c  reduction_test.c  task_test.c  threadprivate_test.c
C/OpenMP/MM/: MM.c
C/OpenMP/Monte-Carlo/: monte-carlo-fail.c
C/OpenMP/Sorting/: OddEvenMergeSort.c
C/OpenMP/Test/: Hello.c  loop_dynamic_test.c
C/Sequential/Monte-Carlo/: monte-carlo.c
Fortran/MPI/: hello.f90
Fortran/OpenMP/: forloop.f90  hello.f90
