cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(MPI_C LANGUAGES C)
set(CMAKE_C_COMPILER mpicc)
add_executable(hello            ./hello.c)
add_executable(allgather        ./Collective/allgather.c)
add_executable(allgatherv       ./Collective/allgatherv.c)
add_executable(allreduce        ./Collective/allreduce.c)
add_executable(alltoall         ./Collective/alltoall.c)
add_executable(alltoallv        ./Collective/alltoallv.c)
add_executable(barrier          ./Collective/barrier.c)
add_executable(bcast            ./Collective/bcast.c)
add_executable(gather           ./Collective/gather.c)
add_executable(gatherv          ./Collective/gatherv.c)
add_executable(reduce           ./Collective/reduce.c)
add_executable(scatter          ./Collective/scatter.c)
add_executable(scatterv         ./Collective/scatterv.c)
add_executable(monte-caelo      ./Monte-Carlo/monte-carlo.c)
add_executable(isend_and_irecv  ./Point-to-Point/isend_and_irecv.c)
add_executable(send_and_recv    ./Point-to-Point/send_and_recv.c)
add_executable(sendrecv         ./Point-to-Point/sendrecv.c)
add_executable(sendrecv_replace ./Point-to-Point/sendrecv_replace.c)
add_executable(bitonic          ./Sorting/bitonic.c)
target_link_libraries(bitonic m)
add_executable(psrs             ./Sorting/psrs.c)
target_link_libraries(psrs m)
