cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(OpenMP_C LANGUAGES C)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_C_FLAGS -fopenmp)
add_executable(Fibonacci            ./Fibonacci/Fibonacci.c)
#add_executable(section_test         ./Fibonacci/Fail/section_test.c)
add_executable(OpenMP_MM                   ./MM/MM.c)
add_executable(monte-carlo-fail     ./Monte-Carlo/monte-carlo-fail.c)
add_executable(monte-carlo          ./Monte-Carlo/monte-carlo.c)
add_executable(OddEvenMergeSort     ./Sorting/OddEvenMergeSort.c)
target_link_libraries(OddEvenMergeSort m)
add_executable(Hello                ./Test/Hello.c)
add_executable(ifdef_test           ./Test/ifdef_test.c)
add_executable(lastprivate_test     ./Test/lastprivate_test.c)
add_executable(loop_dynamic_test    ./Test/loop_dynamic_test.c)
add_executable(loop_static_test     ./Test/loop_static_test.c)
add_executable(loop_test            ./Test/loop_test.c)
add_executable(private_test         ./Test/private_test.c)
add_executable(reduction_test       ./Test/reduction_test.c)
add_executable(task_test            ./Test/task_test.c)
add_executable(threadprivate_test   ./Test/threadprivate_test.c)
